force-app/main/default/objects/Products_Services__c/Products_Services__c.object-meta.xml
<CustomObject>
    <label>Products &amp; Services</label>
    <nameField>
        <label>Products &amp; Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products &amp; Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>