force-app/main/default/objects/Products_Services__c/fields/Average_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Cost__c</fullName>
    <description>Average annual cost of the product. If it is for 401(k) product use 15 employees for baseline.</description>
    <inlineHelpText>Average annual cost of the product. If it is for 401(k) product use 15 employees for baseline.</inlineHelpText>
    <label>Average Annual Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>