force-app/main/default/objects/Products_Services__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Type of payroll integration opportunity to create, used to route to correct opp owner.</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>Direct Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>