force-app/main/default/objects/Products_Services__c/recordTypes/Payroll_Products.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Products</fullName>
    <active>true</active>
    <label>Payroll Products</label>
</RecordType>